# colqwen_inference

./: .gitignore  README.md  pyproject.toml
examples/: 00_colqwen_embeddings.ipynb
src/: client.py  main.py
src/colqwen_inference/: colqwen.py  modal_app.py
src/utils/: logger.py
